@@ -6,6 +6,7 @@ It uses Spring boot 2, with an H2 database, a search index using Lucene, and thy
 You can add a new book with its ISBN number (information is scrapped from amazon), and associate tags to books.
 The application also provides basic export, and some statistics. 
 
+The application runs with java 12 (with the --enable-preview flag).
 
 ## Authentication
 Authentication is done through Oauth2 with Google, so the application needs two variables.
@@ -13,7 +14,6 @@ Authentication is done through Oauth2 with Google, so the application needs two 
 - `GOOGLE_CLIENT_ID`        
 
 You can connect with your google account, and search book by ISBN.
-
 
 ## Storage
 The data is stored in a local h2 database. 
